--- a/src/app/svg-edit/toolbar.component.css
+++ b/src/app/svg-edit/toolbar.component.css
@@ -13,5 +13,24 @@ mat-toolbar button {
 
 .mat-form-field {
     font-size: 0.5em;
-
 }
+
+#editname {
+    position: relative;
+    top: 5px;
+    left: 5px;
+}
+
+#openDialog {
+    cursor:pointer;
+}
+
+#openDialog .mat-icon {
+    opacity: 0;
+}
+
+#openDialog span:hover + .mat-icon {
+    transition: opacity 0.35s ease-in;
+    opacity: 1;
+}
+
