--- a/src/app/svg-edit/toolbar.component.css
+++ b/src/app/svg-edit/toolbar.component.css
@@ -4,11 +4,21 @@
     top:0;
     z-index: 550;
 }
+
 .example-fill-remaining-space {
     flex: 1 1 auto;
 }
 mat-toolbar button {
     padding: 0;
+}
+
+@media only screen and (max-width: 500px) {
+    .mat-toolbar .mat-button{
+        min-width: 35px;
+    }
+    .toolbar-text{
+        display: none;
+    }
 }
 
 .mat-form-field {
