--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -41,6 +41,15 @@
             <input *ngIf="singleSelectedObject | type:'Stairs'"
                    matInput name="stairstargets" [(ngModel)]="singleSelectedObject.label" placeholder="Object Name">
         </mat-form-field>
+        <mat-form-field>
+            <input type="text" placeholder="Link stairs" aria-label="text" matInput [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete">
+                <mat-option *ngFor="let option of options" [value]="option">
+                    {{ option }}
+                </mat-option>
+            </mat-autocomplete>
+        </mat-form-field>
+
 
         <p>
             Set a blueprint background image:<br>
