--- a/src/app/svg-edit/svg-edit.component.css
+++ b/src/app/svg-edit/svg-edit.component.css
@@ -1,6 +1,6 @@
 :host {
     position: absolute;
-    top:80px;
+    top:65px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -60,6 +60,9 @@
 #canvas-container{
     position: relative;
     flex: auto;
+    margin: 1%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin-bottom: 0;
 }
 #zoom-button-container {
     position: absolute;
@@ -78,4 +81,20 @@
 
 #floor-button-container {
     flex-basis: content;
+    background-color: white;
+    margin: 1%;
+    margin-top: 0.5%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+#floor-button-container .mat-button-toggle-group{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+#floor-button-container .mat-button-toggle-checked{
+    background-color: white;
+}
+
+.floor-button {
+    margin: 3px;
 }
