--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -74,7 +74,7 @@
 </form>-->
 <mat-sidenav-container class="example-container">
     <mat-sidenav #sidenav mode="{{sideNavMode}}" [disableClose]="editMode" class="left-sidenav">
-        <mat-form-field id='searchField'>
+        <mat-form-field id='search-field'>
             <input matInput type="search" incremental name="search" [(ngModel)]="searchQuery"
                    (keyup)="search(searchQuery)"
                    placeholder="Search...">
@@ -274,6 +274,7 @@
                                        (click)="selectFloor(i)">
                         {{f.label.length ? f.label : i+1}}
                     </mat-button-toggle>
+                    <div id="floor-spacer"></div>
                     <button mat-raised-button color="accent" *ngIf="!editMode && hasWritePermission"
                             (click)="switchToEditMode()" class="edit-button">
                         <mat-icon aria-label="Edit">edit</mat-icon>
