--- a/src/app/svg-edit/svg-edit.component.css
+++ b/src/app/svg-edit/svg-edit.component.css
@@ -1,6 +1,6 @@
 :host {
     position: absolute;
-    top:65px;
+    top: 65px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -10,7 +10,6 @@
     align-items: flex-start;
     align-content: space-around;
 }
-
 
 #editorCanvas {
     width: 100%;
@@ -33,8 +32,13 @@
     overflow-x: hidden;
 }
 
-#toolbox .mat-nav-list{
+#toolbox .mat-nav-list {
     /*background-color: white;*/
+}
+
+#properties {
+    display: flex;
+    flex-direction: column;
 }
 
 .panel {
@@ -43,16 +47,17 @@
 }
 
 .search-result-floor {
-    color:#b71c1c;
+    color: #b71c1c;
 }
 
 .tool-buttons button.mat-button {
     display: block;
+    width: 100%;
+    text-align: left;
 }
 
-
 .edit-button {
-   position: absolute;
+    position: absolute;
     right: 0;
     bottom: 0;
 }
@@ -62,24 +67,28 @@
     line-height: unset;
     padding: 2px;
     display: block;
-    margin: 2px ;
+    margin: 2px;
 }
-#canvas-container{
+
+#canvas-container {
     position: relative;
     flex: auto;
     margin: 1%;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     margin-bottom: 0;
 }
+
 #zoom-button-container {
     position: absolute;
     bottom: 12px;
     right: 12px;
 }
+
 #viewer-container {
     flex: 1 1 300px;
     height: 100%;
 }
+
 #viewer-container > div {
     display: flex;
     flex-direction: column;
@@ -91,14 +100,16 @@
     background-color: white;
     margin: 1%;
     margin-top: 0.5%;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-#floor-button-container .mat-button-toggle-group{
+
+#floor-button-container .mat-button-toggle-group {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
 }
-#floor-button-container .mat-button-toggle-checked{
+
+#floor-button-container .mat-button-toggle-checked {
     background-color: white;
 }
 
@@ -106,34 +117,33 @@
     margin: 3px;
 }
 
-
-.mat-sidenav-container{
+.mat-sidenav-container {
     height: 100%;
     width: 100%;
     background-color: #4ABDAC;
     z-index: 0;
 }
+
 .left-sidenav {
     padding: 20px;
 }
-#search-button{
+
+#search-button {
     position: absolute;
     top: 25px;
     left: 25px;
     z-index: 550;
 }
 
-.left-sidenav .mat-form-field .mat-icon{
+.left-sidenav .mat-form-field .mat-icon {
     position: relative;
     /* Adjust these values accordingly */
     top: 5px;
     left: 5px;
 }
-#tools{
-    padding: 3px;
+
+#tools, #properties {
+    padding: 10px;
+    margin: 10px 0;
     background-color: #EEEEEE;
-
 }
-
-
-
