--- a/src/app/svg-edit/dialogs/delete-map-dialog.component.html
+++ b/src/app/svg-edit/dialogs/delete-map-dialog.component.html
@@ -3,7 +3,7 @@
     <span class="mat-body-1">Do you really want to <span class="mat-body-2" id="delete" color="warn">delete</span> this map?</span>
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button>No</button>
-    <button mat-button color="warn">Yes</button>
+    <button mat-button [mat-dialog-close]="true">No</button>
+    <button mat-button color="warn" (click)="deleteMap()">Yes</button>
 </mat-dialog-actions>
 
