--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -14,7 +14,7 @@ h1 #innerTitle{
     font-weight: 100;
 }
 .mat-toolbar{
-    background-color: #4ABDAC;
+    background-color: #4DB6AC;
     position: fixed;
     top:0;
     z-index: 550;
