--- a/src/app/svg-edit/svg-edit.component.css
+++ b/src/app/svg-edit/svg-edit.component.css
@@ -92,8 +92,9 @@
 }
 
 #floor-button-container {
+
     flex-basis: content;
-    background-color: white;
+
     margin: 1%;
     margin-top: 0.5%;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -103,20 +104,26 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    background-color: white;
 }
 
 #floor-button-container .mat-button-toggle-checked {
     background-color: white;
 }
 
+#floor-spacer {
+    flex-grow: 1 ;
+}
+
 .floor-button {
     margin: 3px;
 }
 
+
 .mat-sidenav-container {
     height: 100%;
     width: 100%;
-    background-color: #4ABDAC;
+    background-color: transparent;
     z-index: 0;
 }
 
@@ -144,7 +151,4 @@
     padding: 10px;
     margin: 10px 0;
     background-color: #EEEEEE;
-}
-#floor-spacer {
-    flex-grow: 1 ;
 }
