--- a/src/app/svg-edit/toolbar.component.html
+++ b/src/app/svg-edit/toolbar.component.html
@@ -9,6 +9,18 @@
     </div>
 
     <span class="example-fill-remaining-space"></span>
+    <div >
+        <button mat-button >
+            <mat-icon >edit_mode</mat-icon>
+            <span class="toolbar-text">Edit map</span>
+        </button>
+    </div>
+    <div >
+        <button mat-button >
+            <mat-icon >cancel</mat-icon>
+            <span class="toolbar-text">cancel</span>
+        </button>
+    </div>
 
     <div >
         <button mat-button (click)="saveCurrentMap()">
